new_experiments/logs/product_clustering_larger_synth_kmeans.txt
Sun Jul 2 12:08:37 PDT 2017 spark-submit --driver-memory 10g product_clustering.py --persist-dir new_experiments/product_regression_all_regression_tree_rank_12_depth_5_larger_synth.state/ --user-profiles new_experiments/synth_data_set/profiles.pkl --n-clusters 15 --cluster-model kmeans --movies-file datasets/ml-20m/movies.csv >> new_experiments/logs/product_clustering_larger_synth_kmeans.txt
Traceback (most recent call last):
  File "/longterm/sophiak/fop_qii/product_clustering.py", line 11, in <module>
    import rating_explanation
  File "/longterm/sophiak/fop_qii/rating_explanation.py", line 8, in <module>
    import common_utils
  File "/longterm/sophiak/fop_qii/common_utils.py", line 120
    errs = predobs.map(map_f)
       ^
SyntaxError: invalid syntax
